redesigned  the whole app

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+ <title></title>
+ <link rel="stylesheet" href="{{ url_for('static', filename='home.css') }}">
 </head>
 <body>
 
+<!--<h2>If you want to know your hostname and IP address press the following button: </h2>-->
+<h2></h2><center><b><p style="font-family:Tahoma;color:red;font-size: 15px"><center><b><p style="font-family:Tahoma;color:red;font-size: 15px">Welcome to my first flask app!<br/>
+               You can check the host name and IP by pressing the Get Host Button.<br/>
+               For more info head into /about</center></b></p>
+<p align="center"><a href=host ><button id="theme-toggle">Get Host</button></a></p>
 </body>
 </html>
+<h2></h2><center><b><p style="font-family:Tahoma;color:red;font-size: 15px">To Shutdown the server please press the following button: <br/>
+               </center></b></p></h2>
+<p align="center"><a href=stop ><button id="theme-toggle">Shut Down Server</button></a></p>
+</body>
+</html>
+
