--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,6 @@
  <link rel="stylesheet" href="{{ url_for('static', filename='home.css') }}">
 </head>
 <body>
-
-<!--<h2>If you want to know your hostname and IP address press the following button: </h2>-->
 <h2></h2><center><b><p style="font-family:Tahoma;color:red;font-size: 15px"><center><b><p style="font-family:Tahoma;color:red;font-size: 15px">Welcome to my first flask app!<br/>
                You can check the host name and IP by pressing the Get Host Button.<br/>
                For more info head into /about</center></b></p>
@@ -15,7 +13,10 @@
 </html>
 <h2></h2><center><b><p style="font-family:Tahoma;color:red;font-size: 15px">To Shutdown the server please press the following button: <br/>
                </center></b></p></h2>
-<p align="center"><a href=stop ><button id="theme-toggle">Shut Down Server</button></a></p>
+<p align="center"><a href=stop ><button id="theme-toggle">Shutdown</button></a></p>
 </body>
 </html>
+
+
+
 
